--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "url": "https://github.com/Emily-MVaz/tech-blog/issues"
   },
   "homepage": "https://github.com/Emily-MVaz/tech-blog#readme",
-  "dependencies": {"bcrypt": "^5.0.0",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bulma": "^0.9.4",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.16",
     "sequelize": "^6.3.5"
   }
 }
